<resources>

  <string name="app_name">SpaceXApp</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>

  <string name="missions">Missions</string>
  <string name="status">Status</string>
  <string name="company">Company</string>
  <string name="country">Country</string>
  <string name="boosters">Boosters</string>
  <string name="type">Type</string>
  <string name="serial">Serial</string>
  <string name="manufacturer">Manufacturer</string>
  <string name="reused">Reused</string>
  <string name="active">Active</string>
  <string name="home_port">Home Port</string>
  <string name="landings">Landings</string>
  <string name="info">Info</string>
  <string name="history">History</string>

  <string name="drawer_menu_ships">Ships</string>
  <string name="drawer_menu_capsules">Capsules</string>
  <string name="drawer_menu_rockets">Rockets</string>
  <string name="drawer_menu_cores">Cores</string>
  <string name="drawer_menu_theme">Light Theme</string>

  <string name="rocket_item_rocket_specs">Rocket Specs</string>

  <string name="capsule_item_capsule_specs">Capsule Specs</string>
  <string name="active_since">Active since</string>

  <string name="rocket_details_metrics_m_ft">%1$sm/%2$sft</string>
  <string name="rocket_details_metrics_kg_lb">%1$skg/%2$slb</string>

  <string name="successful_attempted">%1$d/%2$d</string>
  <string name="error_retrieving_data">Cannot retrieve data</string>

  <string name="capsule_details_image_content_description">Image of capsule</string>
  <string name="refresh">Refresh</string>
  <string name="launch_pads">Launch Pads</string>
  <string name="launches">Launches</string>
  <string name="social_media">Social Media</string>
  <string name="wikipedia">Wikipedia</string>
  <string name="search">Search</string>
  <string name="date_first_flight">Date first flight</string>
  <string name="landing_successful">Landing Successful</string>
  <string name="founder">Founder</string>
  <string name="founded">Founded</string>
  <string name="employees">Employees</string>
  <string name="vehicles">Vehicles</string>
  <string name="launch_sites">Launch sites</string>
  <string name="test_sites">Test sites</string>
  <string name="ceo">CEO</string>
  <string name="cto">CTO</string>
  <string name="coo">COO</string>
  <string name="cto_propulsion">CTO propulsion</string>
  <string name="valuation">Valuation</string>
  <string name="cost_per_launch">Cost per launch</string>
  <string name="success_rate">Success rate</string>
  <string name="stages">Stages</string>
  <string name="block">Block</string>
  <string name="rtls_landings">RTLS landings</string>
  <string name="asds_landings">ASDS landings</string>
  <string name="water_landing">Water landing</string>
  <string name="address">Address</string>
  <string name="city">City</string>
  <string name="state">State</string>
  <string name="name">Name</string>
  <string name="region">Region</string>
  <string name="latitude">Latitude</string>
  <string name="longitude">Longitude</string>
  <string name="reference_system">Reference system</string>
  <string name="regime">Regime</string>
  <string name="semi_major_axis_km">Semi Major Axis Km</string>
  <string name="height">Height</string>
  <string name="diameter">Diameter</string>
  <string name="mass">Mass</string>

  <string name="twitter_screen_name">"@"%1$s</string>

  <string name="error_something_gone_wrong">Something has gone wrong</string>
  <string name="error_no_internet">No internet</string>

</resources>
