<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <group android:checkableBehavior="single">
    <item
      android:id="@+id/nav_ships"
      android:title="@string/drawer_menu_ships" />
    <item
      android:id="@+id/nav_capsules"
      android:title="@string/drawer_menu_capsules" />
    <item
      android:id="@+id/nav_rockets"
      android:title="@string/drawer_menu_rockets" />

    <item
      android:id="@+id/nav_cores"
      android:title="@string/drawer_menu_cores" />

    <item
      android:id="@+id/nav_launch_pads"
      android:title="Launch Pads" />

    <item
      android:id="@+id/nav_launches"
      android:title="Launches" />

  </group>

  <item
    android:id="@+id/nav_switch_theme"
    android:title="@string/drawer_menu_theme"
    app:actionLayout="@layout/layout_switch" />

  <group android:checkableBehavior="single">
    <item
      android:id="@+id/nav_info"
      android:title="@string/info" />

    <item
      android:id="@+id/nav_history"
      android:title="@string/history" />

    <item
      android:id="@+id/nav_social_media"
      android:title="Social Media" />
  </group>

</menu>