<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">

  <TextView
    android:id="@+id/textView34"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:text="@string/height"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

  <TextView
    android:id="@+id/tvElvRocketDetailsMetricsHeight"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="@+id/textView34"
    tools:text="70m/229.6ft"/>

  <TextView
    android:id="@+id/textView41"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:text="@string/diameter"
    app:layout_constraintStart_toStartOf="@+id/textView34"
    app:layout_constraintTop_toBottomOf="@+id/textView34"/>

  <TextView
    android:id="@+id/tvElvRocketDetailsMetricsDiameter"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="@+id/tvElvRocketDetailsMetricsHeight"
    app:layout_constraintTop_toTopOf="@+id/textView41"
    tools:text="12.2m/39.9ft"/>

  <TextView
    android:id="@+id/textView43"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:text="@string/mass"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="@+id/textView41"
    app:layout_constraintTop_toBottomOf="@+id/textView41"/>

  <TextView
    android:id="@+id/tvElvRocketDetailsMetricsMass"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="@+id/tvElvRocketDetailsMetricsDiameter"
    app:layout_constraintTop_toTopOf="@+id/textView43"
    tools:text="kg/lb"/>

</androidx.constraintlayout.widget.ConstraintLayout>